@@ -4,6 +4,7 @@ Revision history for perl distribution Mojo-SNMP
  - Fix SNMPv3 discovery process #8
    Contributors: Espen Tallaksen and Lewitzki Andreas
  - Fix infinite bulk_walk and walk
+ - Fix retrieving data in correct order
 
 0.10 2014-12-18T17:16:48Z
  - Fix multiple dispatcher objects can't coexist #7
